[Create] init.sh作成と微修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build: .
     volumes:
-      - ./APP/:/var/src
+      - ./Src/:/var/src
     ports:
       - '3000:3000'
     tty: true
